omg i was wrong! It created all this android stuff!!

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,8 @@
 {
   "name": "MyIonicProject",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "ionic-angular",
   "id": "9b7d2b3e"
 }
